# ibaml

./: .gitignore  CITATION.cff  LICENSE  README.md  env_bootstrap.sh  pyproject.toml
configs/: config.yml
src/ibaml/: __init__.py  cli.py
src/ibaml/benchmarks/: pca.py
src/ibaml/config/: schemas.py
src/ibaml/data/: prep.py
src/ibaml/eval/: metrics.py
src/ibaml/features/: __init__.py  engineering.py
src/ibaml/iba/: polynomials.py
src/ibaml/losses/: __init__.py  objective.py
src/ibaml/pipelines/: __init__.py  mf_search.py  sf_search.py  target_runner.py
src/ibaml/reporting/: analytics.py  export_csv.py  figures.py
src/ibaml/training/: hyperopt.py  model.py
src/ibaml/utils/: core_predict.py  expressions.py
src/ibaml/validation/: expanding_cv.py
tests/: test_benchmark.py  test_config_schema.py  test_expanding_cv.py  test_losses.py
